# delta-theory

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  tests.yml
Data/: fe_p_dbtt_aes_dataset.csv  fe_p_dbtt_valid.csv  nakata.csv
apps/: __init__.py  delta_fatigue_app.py
core/: README.md  Universal_Lindemann.py  __init__.py  __main__.py  banners.py  materials.py  materials_unified.py  unified_flc_v7.py  unified_flc_v8_1.py  unified_yield_fatigue_v6_9.py  unified_yield_fatigue_v6_9b_tau_classes (3).py  unified_yield_fatigue_v6_9b_tau_classes.py
delta_theory/: Lindemann.py  README.md  __init__.py  __main__.py  am_fatigue.py  banners.py  creep.py  dbt_unified.py  fatigue_redis_api.py  lindemann.py  material.py  materials.py  ssoc.py  unified_flc_v8_1.py  unified_yield_fatigue_v10.py  unified_yield_fatigue_v6_9.py
examples/: basic_usage.py  f_d_multi_factor_model.py  f_d_physical_basis.md  validation.py
github/: dependabot.yml
github/workflows/: release.yml  tests.yml
scripts/: README.me
scripts/fatigue_db/: README.me  upload_to_redis.py
tests/: conftest.py  test_core.py
validation/: __init__.py  fatigue_redis_api.py
